Revert "fix(KAPH-3121): fix horizontally squashed selected radio button"
This reverts commit 51c55e8a1468d8f123ce58bb1e4eb04431ec1ca5.

--- a/css/iframeui.css
+++ b/css/iframeui.css
@@ -11643,7 +11643,8 @@ fieldset.valid input[type=checkbox] + label:before {
 }
 
 fieldset.valid input[type=radio] + label:before {
-    border: 2px solid #000 !important;
+    border-color: #060 !important;
+    border: 0px !important;
 }
 
 .achieveforms-container .all-sections .field .fieldContent fieldset.fieldInput .checkbox-wrapper .check2:focus + label:before, .achieveforms-container .all-sections .field .fieldContent fieldset.fieldInput .checkbox-wrapper .radio2:focus + label:before, .achieveforms-container .all-sections .field .fieldContent fieldset.fieldInput .radio-wrapper .check2:focus + label:before, .achieveforms-container .all-sections .field .fieldContent fieldset.fieldInput .radio-wrapper .radio2:focus + label:before {
@@ -11676,7 +11677,7 @@ fieldset.valid input[type=radio] + label:before {
 
 }
 
-.gds-select [type=checkbox] + label::before {
+.gds-select [type=checkbox] + label::before, .gds-select [type=radio] + label::before {
     border-radius: 0px;
     content: "";
     border: 2px solid #000 !important;
@@ -11690,10 +11691,11 @@ fieldset.valid input[type=radio] + label:before {
 
 .gds-select [type=radio] + label::before {
     content: "";
-    border: 2px solid #000 !important;
+    border: 2px solid #000;
     background: transparent;
-    width: 25px;
-    height: 25px;
+    width: 35px;
+    height: 35px;
+    /* position: absolute;*/
     top: 5px;
     left: 0;
     border-radius: 50%;
